# CuriousSwirl

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml
data/opposites/: o3_pruned.csv
data/wordnet_curated/: wordnet_pruned_checked.csv
prose/: HeyLookAtThisSwirl.tex  antonyms_bib.bib
results/filtered_pairs/: antonyms_unvalidated.json  single_token_vocabulary.json  synonyms_unvalidated.json
results/validation/: antonyms_all_votes.json  antonyms_validated.json  state.json  synonyms_all_votes.json  synonyms_validated.json
scripts/: 01_prepare_data.py  01a_filter_single_token.py  02_extract_embeddings.py  03_generate_pairs.py  04_compute_statistics.py  05_classify_demo.py  06_compute_projections.py  generate_cosine_sim_plots.py  generate_hp_grid.py  generate_paper_figures.py  prepopulate_cache.py  run_all.py
semsim/: __init__.py  classify.py  data.py  embeddings.py  figure_data.py  pairs.py  plots.py  projection_cache.py  projections.py  stats.py  unfiltered.py
tests/: conftest.py  test_classify.py  test_config.py  test_data.py  test_embeddings.py  test_release_workflow.py  test_stats.py
